src/objects/My_Staff__c.object
<CustomObject>
    <fields>
        <fullName>Code__c</fullName>
        <inlineHelpText>Barcode numbers</inlineHelpText>
        <label>Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Description__c</fullName>
        <inlineHelpText>Barcode description</inlineHelpText>
        <label>Description</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>code2__c</fullName>
        <label>code2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>des2__c</fullName>
        <label>des2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>My Staff</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>My Staff Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>My Staff</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>